// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Heading Default 1`] = `
<header
  className="heading color-secondary size-xl"
>
  This is a heading
</header>
`;

exports[`Storyshots Atoms/Heading Double Extra Large 1`] = `
<header
  className="heading color-secondary size-2xl"
>
  Double Extra Large Size
</header>
`;

exports[`Storyshots Atoms/Heading Extra Large 1`] = `
<header
  className="heading color-secondary size-xl"
>
  Extra Large Size
</header>
`;

exports[`Storyshots Atoms/Heading Extra Small 1`] = `
<header
  className="heading color-secondary size-xs"
>
  Extra Small Size
</header>
`;

exports[`Storyshots Atoms/Heading Large 1`] = `
<header
  className="heading color-secondary size-lg"
>
  Large Size
</header>
`;

exports[`Storyshots Atoms/Heading Medium 1`] = `
<header
  className="heading color-secondary size-md"
>
  Medium Size
</header>
`;

exports[`Storyshots Atoms/Heading Primary Color 1`] = `
<header
  className="heading color-primary size-xl"
>
  Primary Color
</header>
`;

exports[`Storyshots Atoms/Heading Secondary Color 1`] = `
<header
  className="heading color-secondary size-xl"
>
  Secondary Color
</header>
`;

exports[`Storyshots Atoms/Heading Small 1`] = `
<header
  className="heading color-secondary size-sm"
>
  Small Size
</header>
`;

exports[`Storyshots Atoms/Heading Tertiary Color 1`] = `
<header
  className="heading color-tertiary size-xl"
>
  Tertiary Color
</header>
`;

exports[`Storyshots Atoms/Icon Default 1`] = `
<div
  className="icon"
  style={
    Object {
      "height": 16,
      "width": 16,
    }
  }
>
  <picture
    className="picture"
  >
    <img
      src="/icons/public.svg"
      style={
        Object {
          "height": "auto",
          "maxWidth": 16,
        }
      }
    />
  </picture>
</div>
`;

exports[`Storyshots Atoms/Icon Icons 1`] = `
Array [
  <div
    style={
      Object {
        "display": "flex",
        "padding": "5px",
      }
    }
  >
    <div
      className="icon"
      style={
        Object {
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <picture
        className="picture"
      >
        <img
          src="/icons/account_circle.svg"
          style={
            Object {
              "height": "auto",
              "maxWidth": undefined,
            }
          }
        />
      </picture>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#fafafa",
          "border": "1px solid #eaeaea",
          "borderRadius": "10px",
          "fontSize": "1.2rem",
          "padding": "1.2rem",
          "textAlign": "center",
        }
      }
    >
      account
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "flex",
        "padding": "5px",
      }
    }
  >
    <div
      className="icon"
      style={
        Object {
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <picture
        className="picture"
      >
        <img
          src="/icons/exit_to_app.svg"
          style={
            Object {
              "height": "auto",
              "maxWidth": undefined,
            }
          }
        />
      </picture>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#fafafa",
          "border": "1px solid #eaeaea",
          "borderRadius": "10px",
          "fontSize": "1.2rem",
          "padding": "1.2rem",
          "textAlign": "center",
        }
      }
    >
      logout
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "flex",
        "padding": "5px",
      }
    }
  >
    <div
      className="icon"
      style={
        Object {
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <picture
        className="picture"
      >
        <img
          src="/icons/clear.svg"
          style={
            Object {
              "height": "auto",
              "maxWidth": undefined,
            }
          }
        />
      </picture>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#fafafa",
          "border": "1px solid #eaeaea",
          "borderRadius": "10px",
          "fontSize": "1.2rem",
          "padding": "1.2rem",
          "textAlign": "center",
        }
      }
    >
      close
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "flex",
        "padding": "5px",
      }
    }
  >
    <div
      className="icon"
      style={
        Object {
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <picture
        className="picture"
      >
        <img
          src="/icons/chat_bubble_outline.svg"
          style={
            Object {
              "height": "auto",
              "maxWidth": undefined,
            }
          }
        />
      </picture>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#fafafa",
          "border": "1px solid #eaeaea",
          "borderRadius": "10px",
          "fontSize": "1.2rem",
          "padding": "1.2rem",
          "textAlign": "center",
        }
      }
    >
      comment
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "flex",
        "padding": "5px",
      }
    }
  >
    <div
      className="icon"
      style={
        Object {
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <picture
        className="picture"
      >
        <img
          src="/icons/loop.svg"
          style={
            Object {
              "height": "auto",
              "maxWidth": undefined,
            }
          }
        />
      </picture>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#fafafa",
          "border": "1px solid #eaeaea",
          "borderRadius": "10px",
          "fontSize": "1.2rem",
          "padding": "1.2rem",
          "textAlign": "center",
        }
      }
    >
      retweet
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "flex",
        "padding": "5px",
      }
    }
  >
    <div
      className="icon"
      style={
        Object {
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <picture
        className="picture"
      >
        <img
          src="/icons/favorite_outline.svg"
          style={
            Object {
              "height": "auto",
              "maxWidth": undefined,
            }
          }
        />
      </picture>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#fafafa",
          "border": "1px solid #eaeaea",
          "borderRadius": "10px",
          "fontSize": "1.2rem",
          "padding": "1.2rem",
          "textAlign": "center",
        }
      }
    >
      favoriteOutline
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "flex",
        "padding": "5px",
      }
    }
  >
    <div
      className="icon"
      style={
        Object {
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <picture
        className="picture"
      >
        <img
          src="/icons/favorite.svg"
          style={
            Object {
              "height": "auto",
              "maxWidth": undefined,
            }
          }
        />
      </picture>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#fafafa",
          "border": "1px solid #eaeaea",
          "borderRadius": "10px",
          "fontSize": "1.2rem",
          "padding": "1.2rem",
          "textAlign": "center",
        }
      }
    >
      favoriteFill
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "flex",
        "padding": "5px",
      }
    }
  >
    <div
      className="icon"
      style={
        Object {
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <picture
        className="picture"
      >
        <img
          src="/icons/bookmark_outline.svg"
          style={
            Object {
              "height": "auto",
              "maxWidth": undefined,
            }
          }
        />
      </picture>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#fafafa",
          "border": "1px solid #eaeaea",
          "borderRadius": "10px",
          "fontSize": "1.2rem",
          "padding": "1.2rem",
          "textAlign": "center",
        }
      }
    >
      bookmarkOutline
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "flex",
        "padding": "5px",
      }
    }
  >
    <div
      className="icon"
      style={
        Object {
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <picture
        className="picture"
      >
        <img
          src="/icons/bookmark.svg"
          style={
            Object {
              "height": "auto",
              "maxWidth": undefined,
            }
          }
        />
      </picture>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#fafafa",
          "border": "1px solid #eaeaea",
          "borderRadius": "10px",
          "fontSize": "1.2rem",
          "padding": "1.2rem",
          "textAlign": "center",
        }
      }
    >
      bookmarkFill
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "flex",
        "padding": "5px",
      }
    }
  >
    <div
      className="icon"
      style={
        Object {
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <picture
        className="picture"
      >
        <img
          src="/icons/add_photo_alternate.svg"
          style={
            Object {
              "height": "auto",
              "maxWidth": undefined,
            }
          }
        />
      </picture>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#fafafa",
          "border": "1px solid #eaeaea",
          "borderRadius": "10px",
          "fontSize": "1.2rem",
          "padding": "1.2rem",
          "textAlign": "center",
        }
      }
    >
      picture
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "flex",
        "padding": "5px",
      }
    }
  >
    <div
      className="icon"
      style={
        Object {
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <picture
        className="picture"
      >
        <img
          src="/icons/camera_alt.svg"
          style={
            Object {
              "height": "auto",
              "maxWidth": undefined,
            }
          }
        />
      </picture>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#fafafa",
          "border": "1px solid #eaeaea",
          "borderRadius": "10px",
          "fontSize": "1.2rem",
          "padding": "1.2rem",
          "textAlign": "center",
        }
      }
    >
      pictureAdd
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "flex",
        "padding": "5px",
      }
    }
  >
    <div
      className="icon"
      style={
        Object {
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <picture
        className="picture"
      >
        <img
          src="/icons/arrow_drop_down.svg"
          style={
            Object {
              "height": "auto",
              "maxWidth": undefined,
            }
          }
        />
      </picture>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#fafafa",
          "border": "1px solid #eaeaea",
          "borderRadius": "10px",
          "fontSize": "1.2rem",
          "padding": "1.2rem",
          "textAlign": "center",
        }
      }
    >
      angleDown
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "flex",
        "padding": "5px",
      }
    }
  >
    <div
      className="icon"
      style={
        Object {
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <picture
        className="picture"
      >
        <img
          src="/icons/person_add.svg"
          style={
            Object {
              "height": "auto",
              "maxWidth": undefined,
            }
          }
        />
      </picture>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#fafafa",
          "border": "1px solid #eaeaea",
          "borderRadius": "10px",
          "fontSize": "1.2rem",
          "padding": "1.2rem",
          "textAlign": "center",
        }
      }
    >
      contactAdd
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "flex",
        "padding": "5px",
      }
    }
  >
    <div
      className="icon"
      style={
        Object {
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <picture
        className="picture"
      >
        <img
          src="/icons/person.svg"
          style={
            Object {
              "height": "auto",
              "maxWidth": undefined,
            }
          }
        />
      </picture>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#fafafa",
          "border": "1px solid #eaeaea",
          "borderRadius": "10px",
          "fontSize": "1.2rem",
          "padding": "1.2rem",
          "textAlign": "center",
        }
      }
    >
      contact
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "flex",
        "padding": "5px",
      }
    }
  >
    <div
      className="icon"
      style={
        Object {
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <picture
        className="picture"
      >
        <img
          src="/icons/group.svg"
          style={
            Object {
              "height": "auto",
              "maxWidth": undefined,
            }
          }
        />
      </picture>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#fafafa",
          "border": "1px solid #eaeaea",
          "borderRadius": "10px",
          "fontSize": "1.2rem",
          "padding": "1.2rem",
          "textAlign": "center",
        }
      }
    >
      contactGroup
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "flex",
        "padding": "5px",
      }
    }
  >
    <div
      className="icon"
      style={
        Object {
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <picture
        className="picture"
      >
        <img
          src="/icons/how_to_reg.svg"
          style={
            Object {
              "height": "auto",
              "maxWidth": undefined,
            }
          }
        />
      </picture>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#fafafa",
          "border": "1px solid #eaeaea",
          "borderRadius": "10px",
          "fontSize": "1.2rem",
          "padding": "1.2rem",
          "textAlign": "center",
        }
      }
    >
      contactOk
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "flex",
        "padding": "5px",
      }
    }
  >
    <div
      className="icon"
      style={
        Object {
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <picture
        className="picture"
      >
        <img
          src="/icons/lock_outline.svg"
          style={
            Object {
              "height": "auto",
              "maxWidth": undefined,
            }
          }
        />
      </picture>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#fafafa",
          "border": "1px solid #eaeaea",
          "borderRadius": "10px",
          "fontSize": "1.2rem",
          "padding": "1.2rem",
          "textAlign": "center",
        }
      }
    >
      privateOutline
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "flex",
        "padding": "5px",
      }
    }
  >
    <div
      className="icon"
      style={
        Object {
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <picture
        className="picture"
      >
        <img
          src="/icons/https.svg"
          style={
            Object {
              "height": "auto",
              "maxWidth": undefined,
            }
          }
        />
      </picture>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#fafafa",
          "border": "1px solid #eaeaea",
          "borderRadius": "10px",
          "fontSize": "1.2rem",
          "padding": "1.2rem",
          "textAlign": "center",
        }
      }
    >
      privateFill
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "flex",
        "padding": "5px",
      }
    }
  >
    <div
      className="icon"
      style={
        Object {
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <picture
        className="picture"
      >
        <img
          src="/icons/public.svg"
          style={
            Object {
              "height": "auto",
              "maxWidth": undefined,
            }
          }
        />
      </picture>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#fafafa",
          "border": "1px solid #eaeaea",
          "borderRadius": "10px",
          "fontSize": "1.2rem",
          "padding": "1.2rem",
          "textAlign": "center",
        }
      }
    >
      public
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "flex",
        "padding": "5px",
      }
    }
  >
    <div
      className="icon"
      style={
        Object {
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <picture
        className="picture"
      >
        <img
          src="/icons/mail_outline.svg"
          style={
            Object {
              "height": "auto",
              "maxWidth": undefined,
            }
          }
        />
      </picture>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#fafafa",
          "border": "1px solid #eaeaea",
          "borderRadius": "10px",
          "fontSize": "1.2rem",
          "padding": "1.2rem",
          "textAlign": "center",
        }
      }
    >
      mail
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "flex",
        "padding": "5px",
      }
    }
  >
    <div
      className="icon"
      style={
        Object {
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <picture
        className="picture"
      >
        <img
          src="/icons/explore.svg"
          style={
            Object {
              "height": "auto",
              "maxWidth": undefined,
            }
          }
        />
      </picture>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#fafafa",
          "border": "1px solid #eaeaea",
          "borderRadius": "10px",
          "fontSize": "1.2rem",
          "padding": "1.2rem",
          "textAlign": "center",
        }
      }
    >
      explore
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "flex",
        "padding": "5px",
      }
    }
  >
    <div
      className="icon"
      style={
        Object {
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <picture
        className="picture"
      >
        <img
          src="/icons/home.svg"
          style={
            Object {
              "height": "auto",
              "maxWidth": undefined,
            }
          }
        />
      </picture>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#fafafa",
          "border": "1px solid #eaeaea",
          "borderRadius": "10px",
          "fontSize": "1.2rem",
          "padding": "1.2rem",
          "textAlign": "center",
        }
      }
    >
      home
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "flex",
        "padding": "5px",
      }
    }
  >
    <div
      className="icon"
      style={
        Object {
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <picture
        className="picture"
      >
        <img
          src="/icons/facebook.svg"
          style={
            Object {
              "height": "auto",
              "maxWidth": undefined,
            }
          }
        />
      </picture>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#fafafa",
          "border": "1px solid #eaeaea",
          "borderRadius": "10px",
          "fontSize": "1.2rem",
          "padding": "1.2rem",
          "textAlign": "center",
        }
      }
    >
      facebook
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "flex",
        "padding": "5px",
      }
    }
  >
    <div
      className="icon"
      style={
        Object {
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <picture
        className="picture"
      >
        <img
          src="/icons/google.svg"
          style={
            Object {
              "height": "auto",
              "maxWidth": undefined,
            }
          }
        />
      </picture>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#fafafa",
          "border": "1px solid #eaeaea",
          "borderRadius": "10px",
          "fontSize": "1.2rem",
          "padding": "1.2rem",
          "textAlign": "center",
        }
      }
    >
      google
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "flex",
        "padding": "5px",
      }
    }
  >
    <div
      className="icon"
      style={
        Object {
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <picture
        className="picture"
      >
        <img
          src="/icons/twitter.svg"
          style={
            Object {
              "height": "auto",
              "maxWidth": undefined,
            }
          }
        />
      </picture>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#fafafa",
          "border": "1px solid #eaeaea",
          "borderRadius": "10px",
          "fontSize": "1.2rem",
          "padding": "1.2rem",
          "textAlign": "center",
        }
      }
    >
      twitter
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "flex",
        "padding": "5px",
      }
    }
  >
    <div
      className="icon"
      style={
        Object {
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <picture
        className="picture"
      >
        <img
          src="/icons/github.svg"
          style={
            Object {
              "height": "auto",
              "maxWidth": undefined,
            }
          }
        />
      </picture>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#fafafa",
          "border": "1px solid #eaeaea",
          "borderRadius": "10px",
          "fontSize": "1.2rem",
          "padding": "1.2rem",
          "textAlign": "center",
        }
      }
    >
      github
    </div>
  </div>,
]
`;

exports[`Storyshots Atoms/Label Danger Label 1`] = `
<div
  className="label appearance-danger size-sm"
>
  label
</div>
`;

exports[`Storyshots Atoms/Label Default 1`] = `
<div
  className="label appearance-default size-sm"
>
  label
</div>
`;

exports[`Storyshots Atoms/Label Information Label 1`] = `
<div
  className="label appearance-information size-sm"
>
  label
</div>
`;

exports[`Storyshots Atoms/Label Large Label 1`] = `
<div
  className="label appearance-default size-lg"
>
  label
</div>
`;

exports[`Storyshots Atoms/Label Medium Label 1`] = `
<div
  className="label appearance-default size-md"
>
  label
</div>
`;

exports[`Storyshots Atoms/Label Small Label 1`] = `
<div
  className="label appearance-default size-sm"
>
  label
</div>
`;

exports[`Storyshots Atoms/Label Success Label 1`] = `
<div
  className="label appearance-success size-sm"
>
  label
</div>
`;

exports[`Storyshots Atoms/Label Warning Label 1`] = `
<div
  className="label appearance-warning size-sm"
>
  label
</div>
`;

exports[`Storyshots Atoms/Link Default 1`] = `
<a
  className="link"
  href="https://aroa.dev"
  onClick={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  Click me!
</a>
`;

exports[`Storyshots Atoms/Picture Default 1`] = `
<picture
  className="picture"
>
  <img
    alt="image"
    src="https://placeimg.com/400/400/any"
    style={
      Object {
        "height": "auto",
        "maxWidth": 200,
      }
    }
  />
</picture>
`;

exports[`Storyshots Atoms/Picture Image Rounded 1`] = `
<picture
  className="picture is-rounded"
>
  <img
    alt="image"
    src="https://placeimg.com/400/400/any"
    style={
      Object {
        "height": "auto",
        "maxWidth": 200,
      }
    }
  />
</picture>
`;

exports[`Storyshots Atoms/Text Dark Color 1`] = `
<p
  className="text color-dark size-md"
>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
</p>
`;

exports[`Storyshots Atoms/Text Default 1`] = `
<p
  className="text color-dark size-md"
>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
</p>
`;

exports[`Storyshots Atoms/Text Extra Small 1`] = `
<p
  className="text color-dark size-xs"
>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
</p>
`;

exports[`Storyshots Atoms/Text Large 1`] = `
<p
  className="text color-dark size-lg"
>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
</p>
`;

exports[`Storyshots Atoms/Text Light Color 1`] = `
<p
  className="text color-light size-md"
>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
</p>
`;

exports[`Storyshots Atoms/Text Medium 1`] = `
<p
  className="text color-dark size-md"
>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
</p>
`;

exports[`Storyshots Atoms/Text Small 1`] = `
<p
  className="text color-dark size-sm"
>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
</p>
`;

exports[`Storyshots Layout/Spacer/Default Default 1`] = `
<div
  className="spacer is-visible"
  style={
    Object {
      "height": 0,
      "width": 0,
    }
  }
/>
`;

exports[`Storyshots Layout/Spacer/Default Extra Small 1`] = `
<div
  className="spacer is-visible"
  style={
    Object {
      "height": 5,
      "width": 5,
    }
  }
/>
`;

exports[`Storyshots Layout/Spacer/Default Large 1`] = `
<div
  className="spacer is-visible"
  style={
    Object {
      "height": 40,
      "width": 40,
    }
  }
/>
`;

exports[`Storyshots Layout/Spacer/Default Medium 1`] = `
<div
  className="spacer is-visible"
  style={
    Object {
      "height": 20,
      "width": 20,
    }
  }
/>
`;

exports[`Storyshots Layout/Spacer/Default Small 1`] = `
<div
  className="spacer is-visible"
  style={
    Object {
      "height": 15,
      "width": 15,
    }
  }
/>
`;

exports[`Storyshots Layout/Spacer/Horizontal Default 1`] = `
<div
  className="space horizontal is-visible"
  style={
    Object {
      "height": 0,
    }
  }
/>
`;

exports[`Storyshots Layout/Spacer/Horizontal Extra Small 1`] = `
<div
  className="space horizontal is-visible"
  style={
    Object {
      "height": 5,
    }
  }
/>
`;

exports[`Storyshots Layout/Spacer/Horizontal Large 1`] = `
<div
  className="space horizontal is-visible"
  style={
    Object {
      "height": 40,
    }
  }
/>
`;

exports[`Storyshots Layout/Spacer/Horizontal Medium 1`] = `
<div
  className="space horizontal is-visible"
  style={
    Object {
      "height": 20,
    }
  }
/>
`;

exports[`Storyshots Layout/Spacer/Horizontal Small 1`] = `
<div
  className="space horizontal is-visible"
  style={
    Object {
      "height": 15,
    }
  }
/>
`;

exports[`Storyshots Layout/Spacer/Vertical Default 1`] = `
<div
  className="spacer vertical is-visible"
  style={
    Object {
      "maxHeight": 200,
      "width": 0,
    }
  }
/>
`;

exports[`Storyshots Layout/Spacer/Vertical Extra Small 1`] = `
<div
  className="spacer vertical is-visible"
  style={
    Object {
      "maxHeight": 200,
      "width": 5,
    }
  }
/>
`;

exports[`Storyshots Layout/Spacer/Vertical Large 1`] = `
<div
  className="spacer vertical is-visible"
  style={
    Object {
      "maxHeight": 200,
      "width": 40,
    }
  }
/>
`;

exports[`Storyshots Layout/Spacer/Vertical Medium 1`] = `
<div
  className="spacer vertical is-visible"
  style={
    Object {
      "maxHeight": 200,
      "width": 20,
    }
  }
/>
`;

exports[`Storyshots Layout/Spacer/Vertical Small 1`] = `
<div
  className="spacer vertical is-visible"
  style={
    Object {
      "maxHeight": 200,
      "width": 15,
    }
  }
/>
`;

exports[`Storyshots Molecules/Avatar Default 1`] = `
<div
  className="avatar"
>
  <picture
    className="picture is-rounded"
  >
    <img
      src="images/default-avatar.jpg"
      style={
        Object {
          "height": 60,
          "maxWidth": 60,
        }
      }
    />
  </picture>
</div>
`;

exports[`Storyshots Molecules/Avatar Large Size 1`] = `
<div
  className="avatar"
>
  <picture
    className="picture is-rounded"
  >
    <img
      src="images/default-avatar.jpg"
      style={
        Object {
          "height": 80,
          "maxWidth": 80,
        }
      }
    />
  </picture>
</div>
`;

exports[`Storyshots Molecules/Avatar Medium Size 1`] = `
<div
  className="avatar"
>
  <picture
    className="picture is-rounded"
  >
    <img
      src="images/default-avatar.jpg"
      style={
        Object {
          "height": 60,
          "maxWidth": 60,
        }
      }
    />
  </picture>
</div>
`;

exports[`Storyshots Molecules/Avatar Primay Type 1`] = `
<div
  className="avatar type-primary"
>
  <picture
    className="picture is-rounded"
  >
    <img
      src="images/default-avatar.jpg"
      style={
        Object {
          "height": 60,
          "maxWidth": 60,
        }
      }
    />
  </picture>
</div>
`;

exports[`Storyshots Molecules/Avatar Secondary Type 1`] = `
<div
  className="avatar type-secondary"
>
  <picture
    className="picture is-rounded"
  >
    <img
      src="images/default-avatar.jpg"
      style={
        Object {
          "height": 60,
          "maxWidth": 60,
        }
      }
    />
  </picture>
</div>
`;

exports[`Storyshots Molecules/Avatar Small Size 1`] = `
<div
  className="avatar"
>
  <picture
    className="picture is-rounded"
  >
    <img
      src="images/default-avatar.jpg"
      style={
        Object {
          "height": 40,
          "maxWidth": 40,
        }
      }
    />
  </picture>
</div>
`;

exports[`Storyshots Molecules/Button Danger Color Button 1`] = `
<button
  className="button color-danger variant-filled size-md"
  onClick={[Function]}
>
  Button
</button>
`;

exports[`Storyshots Molecules/Button Default 1`] = `
<button
  className="button color-default variant-filled size-md"
  onClick={[Function]}
>
  Button
</button>
`;

exports[`Storyshots Molecules/Button Default Color Button 1`] = `
<button
  className="button color-default variant-filled size-md"
  onClick={[Function]}
>
  Button
</button>
`;

exports[`Storyshots Molecules/Button Disabled Button 1`] = `
<button
  className="button color-default variant-filled size-md disabled"
  disabled={true}
  onClick={[Function]}
>
  Button
</button>
`;

exports[`Storyshots Molecules/Button Disabled Text Button 1`] = `
<button
  className="button color-default variant-text size-md disabled"
  disabled={true}
  onClick={[Function]}
>
  Button
</button>
`;

exports[`Storyshots Molecules/Button End Icon Button 1`] = `
<button
  className="button color-primary variant-filled size-md"
  onClick={[Function]}
>
  Button
  <div
    className="spacer"
    style={
      Object {
        "height": 5,
        "width": 5,
      }
    }
  />
  <div
    className="icon"
    style={
      Object {
        "height": 16,
        "width": 16,
      }
    }
  >
    <picture
      className="picture"
    >
      <img
        src="/icons/how_to_reg.svg"
        style={
          Object {
            "height": "auto",
            "maxWidth": 16,
          }
        }
      />
    </picture>
  </div>
</button>
`;

exports[`Storyshots Molecules/Button Large Size Button 1`] = `
<button
  className="button color-primary variant-filled size-lg"
  onClick={[Function]}
>
  Button
</button>
`;

exports[`Storyshots Molecules/Button Medium Size Button 1`] = `
<button
  className="button color-primary variant-filled size-md"
  onClick={[Function]}
>
  Button
</button>
`;

exports[`Storyshots Molecules/Button Outline Button 1`] = `
<button
  className="button color-default variant-outline size-md"
  onClick={[Function]}
>
  Button
</button>
`;

exports[`Storyshots Molecules/Button Primary Color Button 1`] = `
<button
  className="button color-primary variant-filled size-md"
  onClick={[Function]}
>
  Button
</button>
`;

exports[`Storyshots Molecules/Button Small Size Button 1`] = `
<button
  className="button color-primary variant-filled size-sm"
  onClick={[Function]}
>
  Button
</button>
`;

exports[`Storyshots Molecules/Button Start Icon Button 1`] = `
<button
  className="button color-primary variant-filled size-md"
  onClick={[Function]}
>
  <div
    className="icon"
    style={
      Object {
        "height": 16,
        "width": 16,
      }
    }
  >
    <picture
      className="picture"
    >
      <img
        src="/icons/person_add.svg"
        style={
          Object {
            "height": "auto",
            "maxWidth": 16,
          }
        }
      />
    </picture>
  </div>
  <div
    className="spacer"
    style={
      Object {
        "height": 5,
        "width": 5,
      }
    }
  />
  Button
</button>
`;

exports[`Storyshots Molecules/Button Success Color Button 1`] = `
<button
  className="button color-success variant-filled size-md"
  onClick={[Function]}
>
  Button
</button>
`;

exports[`Storyshots Molecules/Button Text Button 1`] = `
<button
  className="button color-default variant-text size-md"
  onClick={[Function]}
>
  Button
</button>
`;

exports[`Storyshots Molecules/Input Default 1`] = `
<div
  className="container"
>
  <label
    className="label"
    htmlFor="input-story-1"
  >
    Label
  </label>
  <div
    className="input-container"
  >
    <input
      className="input"
      disabled={false}
      id="input-story-1"
      onChange={[Function]}
      placeholder="Placeholder text..."
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots Molecules/Input Disabled Input 1`] = `
<div
  className="container"
>
  <label
    className="label"
    htmlFor="input-story-3"
  >
    Label
  </label>
  <div
    className="input-container"
  >
    <input
      className="input disabled"
      disabled={true}
      id="input-story-3"
      onChange={[Function]}
      placeholder="Placeholder text..."
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots Molecules/Input Error Input 1`] = `
<div
  className="container"
>
  <label
    className="label error"
    htmlFor="input-story-2"
  >
    Label
  </label>
  <div
    className="input-container"
  >
    <input
      className="input error"
      disabled={false}
      id="input-story-2"
      onChange={[Function]}
      placeholder="Placeholder text..."
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots Molecules/Input Helper Text Error Input 1`] = `
<div
  className="container"
>
  <label
    className="label error"
    htmlFor="input-story-5"
  >
    Label
  </label>
  <div
    className="input-container"
  >
    <input
      className="input error"
      disabled={false}
      id="input-story-5"
      onChange={[Function]}
      placeholder="Placeholder text..."
      type="text"
    />
    <div
      className="helper error"
    >
      Some interesting text
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/Input Helper Text Input 1`] = `
<div
  className="container"
>
  <label
    className="label"
    htmlFor="input-story-4"
  >
    Label
  </label>
  <div
    className="input-container"
  >
    <input
      className="input"
      disabled={false}
      id="input-story-4"
      onChange={[Function]}
      placeholder="Placeholder text..."
      type="text"
    />
    <div
      className="helper"
    >
      Some interesting text
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/Input Icon Input 1`] = `
<div
  className="container"
>
  <label
    className="label"
    htmlFor="input-story-6"
  >
    Label
  </label>
  <div
    className="input-container"
  >
    <div
      className="icon icon"
      style={
        Object {
          "height": 18,
          "width": 18,
        }
      }
    >
      <picture
        className="picture"
      >
        <img
          src="/icons/mail_outline.svg"
          style={
            Object {
              "height": "auto",
              "maxWidth": 18,
            }
          }
        />
      </picture>
    </div>
    <input
      className="input has-icon"
      disabled={false}
      id="input-story-6"
      onChange={[Function]}
      placeholder="Placeholder text..."
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots Tokens/Colors Blue 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#ebf8ff",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-blue-100)
      </span>
      <span
        className="label"
      >
        #ebf8ff
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#bee3f8",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-blue-200)
      </span>
      <span
        className="label"
      >
        #bee3f8
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#90cdf4",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-blue-300)
      </span>
      <span
        className="label"
      >
        #90cdf4
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#63b3ed",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-blue-400)
      </span>
      <span
        className="label"
      >
        #63b3ed
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#4299e1",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-blue-500)
      </span>
      <span
        className="label"
      >
        #4299e1
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#3182ce",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-blue-600)
      </span>
      <span
        className="label"
      >
        #3182ce
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#2b6cb0",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-blue-700)
      </span>
      <span
        className="label"
      >
        #2b6cb0
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#2c5282",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-blue-800)
      </span>
      <span
        className="label"
      >
        #2c5282
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#2a4365",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-blue-900)
      </span>
      <span
        className="label"
      >
        #2a4365
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Colors Brand 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#feb800",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-brand-gold)
      </span>
      <span
        className="label"
      >
        #feb800
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#333333",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-brand-darkGray)
      </span>
      <span
        className="label"
      >
        #333333
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#a6a6a6",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-brand-gainboro)
      </span>
      <span
        className="label"
      >
        #a6a6a6
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Colors Default 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#feb800",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-brand-gold)
      </span>
      <span
        className="label"
      >
        #feb800
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Colors Gray 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#f7fafc",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-gray-100)
      </span>
      <span
        className="label"
      >
        #f7fafc
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#edf2f7",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-gray-200)
      </span>
      <span
        className="label"
      >
        #edf2f7
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#e2e8f0",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-gray-300)
      </span>
      <span
        className="label"
      >
        #e2e8f0
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#cbd5e0",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-gray-400)
      </span>
      <span
        className="label"
      >
        #cbd5e0
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#a0aec0",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-gray-500)
      </span>
      <span
        className="label"
      >
        #a0aec0
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#718096",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-gray-600)
      </span>
      <span
        className="label"
      >
        #718096
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#4a5568",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-gray-700)
      </span>
      <span
        className="label"
      >
        #4a5568
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#2d3748",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-gray-800)
      </span>
      <span
        className="label"
      >
        #2d3748
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#1a202c",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-gray-900)
      </span>
      <span
        className="label"
      >
        #1a202c
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Colors Green 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#f0fff4",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-green-100)
      </span>
      <span
        className="label"
      >
        #f0fff4
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#c6f6d5",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-green-200)
      </span>
      <span
        className="label"
      >
        #c6f6d5
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#9ae6b4",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-green-300)
      </span>
      <span
        className="label"
      >
        #9ae6b4
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#68d391",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-green-400)
      </span>
      <span
        className="label"
      >
        #68d391
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#48bb78",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-green-500)
      </span>
      <span
        className="label"
      >
        #48bb78
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#38a169",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-green-600)
      </span>
      <span
        className="label"
      >
        #38a169
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#2f855a",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-green-700)
      </span>
      <span
        className="label"
      >
        #2f855a
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#276749",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-green-800)
      </span>
      <span
        className="label"
      >
        #276749
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#22543d",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-green-900)
      </span>
      <span
        className="label"
      >
        #22543d
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Colors Indigo 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#ebf4ff",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-indigo-100)
      </span>
      <span
        className="label"
      >
        #ebf4ff
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#c3dafe",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-indigo-200)
      </span>
      <span
        className="label"
      >
        #c3dafe
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#a3bffa",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-indigo-300)
      </span>
      <span
        className="label"
      >
        #a3bffa
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#7f9cf5",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-indigo-400)
      </span>
      <span
        className="label"
      >
        #7f9cf5
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#667eea",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-indigo-500)
      </span>
      <span
        className="label"
      >
        #667eea
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#5a67d8",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-indigo-600)
      </span>
      <span
        className="label"
      >
        #5a67d8
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#4c51bf",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-indigo-700)
      </span>
      <span
        className="label"
      >
        #4c51bf
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#434190",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-indigo-800)
      </span>
      <span
        className="label"
      >
        #434190
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#3c366b",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-indigo-900)
      </span>
      <span
        className="label"
      >
        #3c366b
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Colors Orange 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fffaf0",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-orange-100)
      </span>
      <span
        className="label"
      >
        #fffaf0
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#feebc8",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-orange-200)
      </span>
      <span
        className="label"
      >
        #feebc8
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fbd38d",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-orange-300)
      </span>
      <span
        className="label"
      >
        #fbd38d
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#f6ad55",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-orange-400)
      </span>
      <span
        className="label"
      >
        #f6ad55
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#ed8936",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-orange-500)
      </span>
      <span
        className="label"
      >
        #ed8936
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#dd6b20",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-orange-600)
      </span>
      <span
        className="label"
      >
        #dd6b20
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#c05621",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-orange-700)
      </span>
      <span
        className="label"
      >
        #c05621
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#9c4221",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-orange-800)
      </span>
      <span
        className="label"
      >
        #9c4221
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#7b341e",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-orange-900)
      </span>
      <span
        className="label"
      >
        #7b341e
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Colors Pink 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fff5f7",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-pink-100)
      </span>
      <span
        className="label"
      >
        #fff5f7
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fed7e2",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-pink-200)
      </span>
      <span
        className="label"
      >
        #fed7e2
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fbb6ce",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-pink-300)
      </span>
      <span
        className="label"
      >
        #fbb6ce
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#f687b3",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-pink-400)
      </span>
      <span
        className="label"
      >
        #f687b3
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#ed64a6",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-pink-500)
      </span>
      <span
        className="label"
      >
        #ed64a6
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#d53f8c",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-pink-600)
      </span>
      <span
        className="label"
      >
        #d53f8c
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#b83280",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-pink-700)
      </span>
      <span
        className="label"
      >
        #b83280
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#97266d",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-pink-800)
      </span>
      <span
        className="label"
      >
        #97266d
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#702459",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-pink-900)
      </span>
      <span
        className="label"
      >
        #702459
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Colors Purple 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#faf5ff",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-purple-100)
      </span>
      <span
        className="label"
      >
        #faf5ff
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#e9d8fd",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-purple-200)
      </span>
      <span
        className="label"
      >
        #e9d8fd
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#d6bcfa",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-purple-300)
      </span>
      <span
        className="label"
      >
        #d6bcfa
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#b794f4",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-purple-400)
      </span>
      <span
        className="label"
      >
        #b794f4
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#9f7aea",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-purple-500)
      </span>
      <span
        className="label"
      >
        #9f7aea
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#805ad5",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-purple-600)
      </span>
      <span
        className="label"
      >
        #805ad5
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#6b46c1",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-purple-700)
      </span>
      <span
        className="label"
      >
        #6b46c1
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#553c9a",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-purple-800)
      </span>
      <span
        className="label"
      >
        #553c9a
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#44337a",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-purple-900)
      </span>
      <span
        className="label"
      >
        #44337a
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Colors Red 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fff5f5",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-red-100)
      </span>
      <span
        className="label"
      >
        #fff5f5
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fed7d7",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-red-200)
      </span>
      <span
        className="label"
      >
        #fed7d7
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#feb2b2",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-red-300)
      </span>
      <span
        className="label"
      >
        #feb2b2
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fc8181",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-red-400)
      </span>
      <span
        className="label"
      >
        #fc8181
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#f56565",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-red-500)
      </span>
      <span
        className="label"
      >
        #f56565
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#e53e3e",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-red-600)
      </span>
      <span
        className="label"
      >
        #e53e3e
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#c53030",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-red-700)
      </span>
      <span
        className="label"
      >
        #c53030
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#9b2c2c",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-red-800)
      </span>
      <span
        className="label"
      >
        #9b2c2c
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#742a2a",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-red-900)
      </span>
      <span
        className="label"
      >
        #742a2a
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Colors Teal 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#e6fffa",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-teal-100)
      </span>
      <span
        className="label"
      >
        #e6fffa
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#b2f5ea",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-teal-200)
      </span>
      <span
        className="label"
      >
        #b2f5ea
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#81e6d9",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-teal-300)
      </span>
      <span
        className="label"
      >
        #81e6d9
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#4fd1c5",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-teal-400)
      </span>
      <span
        className="label"
      >
        #4fd1c5
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#38b2ac",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-teal-500)
      </span>
      <span
        className="label"
      >
        #38b2ac
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#319795",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-teal-600)
      </span>
      <span
        className="label"
      >
        #319795
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#2c7a7b",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-teal-700)
      </span>
      <span
        className="label"
      >
        #2c7a7b
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#285e61",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-teal-800)
      </span>
      <span
        className="label"
      >
        #285e61
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#234e52",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-teal-900)
      </span>
      <span
        className="label"
      >
        #234e52
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Colors Yellow 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fffff0",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-yellow-100)
      </span>
      <span
        className="label"
      >
        #fffff0
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fefcbf",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-yellow-200)
      </span>
      <span
        className="label"
      >
        #fefcbf
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#faf089",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-yellow-300)
      </span>
      <span
        className="label"
      >
        #faf089
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#f6e05e",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-yellow-400)
      </span>
      <span
        className="label"
      >
        #f6e05e
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#ecc94b",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-yellow-500)
      </span>
      <span
        className="label"
      >
        #ecc94b
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#d69e2e",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-yellow-600)
      </span>
      <span
        className="label"
      >
        #d69e2e
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#b7791f",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-yellow-700)
      </span>
      <span
        className="label"
      >
        #b7791f
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#975a16",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-yellow-800)
      </span>
      <span
        className="label"
      >
        #975a16
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#744210",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-yellow-900)
      </span>
      <span
        className="label"
      >
        #744210
      </span>
    </div>
  </div>
</div>
`;
